--- a/RMS/RMS/Forms/frmDepartmentDetails.resx
+++ b/RMS/RMS/Forms/frmDepartmentDetails.resx
@@ -120,7 +120,7 @@
   <metadata name="errDepartment.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="columnComboBox1.Data" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="cmbStatus.Data" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAE5TeXN0ZW0uRGF0YSwgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJl
         PW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAABVTeXN0ZW0uRGF0YS5E
