--- a/RMS/RMS/Forms/frmTableDetails.resx
+++ b/RMS/RMS/Forms/frmTableDetails.resx
@@ -180,4 +180,7 @@
         aXNpb24AAAAACAgICAIAAAAAAAAA//////////8L
 </value>
   </data>
+  <metadata name="errSubLocation.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>151, 17</value>
+  </metadata>
 </root>
